test/types/enum/diten/paramenums2.good
paramenums2.chpl:4: In function 'main':
paramenums2.chpl:5: error: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:6: warning: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:7: warning: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:8: warning: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:9: warning: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:10: warning: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:11: warning: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:12: warning: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:13: warning: Comparisons between mixed enumerated types not supported by default
paramenums2.chpl:14: warning: Comparisons between mixed enumerated types not supported by default
